--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Pod-Weaver-Section-AllowOverride
 
+0.02   June 6, 2012
+	- Add the action attribute
+
 0.01   June 1, 2012
 	- Initial release
