--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Pod-Weaver-Section-AllowOverride
 
+0.04   January 5, 2013
+	- Add the match_anywhere attribute
+	- Add tests
+
 0.03   August 11, 2012
 	- Use Pod::Elemental::MakeSelector instead of building a
 	  selector by hand
